--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap");
 
 :root {
-  --primary-bg-color: #5d5376;
+  --primary-bg-color: #4e4676;
   --primary-accent: #000000;
   --secondary-accent: #272727;
 
@@ -10,7 +10,7 @@
   --supportive-text-color: #242d2f;
   --gray-text-color: #565a5b;
 
-  --white-color: #fff;
+  --white-color: #3f2543;
   --gray-color: #e9e8e8;
   --gray-color-2: #c0c0c0;
   --gray-color-3: #e6e6e6;
@@ -29,6 +29,13 @@ body {
   color: var(--main-text-color);
   font-family: "Poppins", sans-serif;
   letter-spacing: -0.15px;
+}
+
+.job-title {
+  font-weight: 500;
+  font-size: 50;
+  text-align: left;
+  margin-bottom: 1;
 }
 
 .container {
@@ -228,31 +235,6 @@ h5 {
   font-weight: 400;
 }
 
-.social-links-row {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  column-gap: 20px;
-  margin: 40px 0 40px;
-  height: 24px;
-
-  img {
-    height: 24px;
-    width: 24px;
-  }
-}
-
-.social-links-row a {
-  filter: invert(35%) sepia(11%) saturate(160%) hue-rotate(145deg)
-    brightness(88%) contrast(80%);
-  transition: all 0.3s ease-in-out;
-}
-
-.social-links-row a:hover {
-  filter: invert(0%) sepia(0%) saturate(7500%) hue-rotate(305deg)
-    brightness(97%) contrast(103%);
-}
-
 /* About section */
 .about {
   padding: 7rem 0;
@@ -274,101 +256,19 @@ h5 {
   margin-bottom: 10px;
 }
 
-.skill {
-  position: relative;
-  display: block;
-  width: 100%;
-  margin-bottom: 30px;
-}
-
-.skill-title,
-.skill-percent {
-  display: inline-block;
-  font-size: 16px;
-  font-weight: 400;
-  /* text-transform: uppercase; */
-  letter-spacing: 0px;
-}
-
-.skill-percent {
-  float: right;
-}
-.skill-bar__progress {
-  background-color: var(--gray-color);
-  border-radius: 5px;
-  height: 4px;
-  width: 100%;
-  overflow: hidden;
-  position: relative;
-}
-
-.skill-bar__fill {
-  background-color: var(--secondary-accent);
-  height: 4px;
-  width: 0; /* Initial width is 0 */
-  transition: width 1.5s ease-in-out; /* Smooth transition for the fill */
-}
-
-.about-download-btn {
-  margin-top: 40px;
-}
-
-.services-row {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 50px;
-  justify-content: space-between;
-}
-
-.service-card {
-  max-width: 300px;
-}
-
-.service-card-img {
-  display: block;
-  height: 50px;
-  margin: 0 auto 20px;
-  filter: invert(33%) sepia(7%) saturate(243%) hue-rotate(145deg)
-    brightness(94%) contrast(81%);
-}
-
-.service-card-title {
-  text-align: center;
-  text-transform: uppercase;
-  letter-spacing: 2px;
-  margin-bottom: 10px;
-  font-weight: 600;
-  font-size: clamp(1.125rem, 1.089rem + 0.18vw, 1.25rem);
-}
-
-.service-card p {
-  font-size: 16px;
-  line-height: 1.7;
-  text-align: center;
-}
-
 /* Works */
 .projects {
   padding: 7rem 0;
   background-color: var(--primary-bg-color);
 }
 
-.projects-title {
-  text-align: center;
-}
-
 .projects-row {
   display: flex;
   flex-wrap: wrap;
+  gap: 30px;
   justify-content: center;
 }
 
-.project-box {
-  position: relative;
-  overflow: hidden;
-  display: block;
-  max-width: 510px;
-}
 
 .project-box a {
   display: inline-block;
@@ -394,48 +294,6 @@ h5 {
   transform: scale(1);
   width: 100%;
   transition: all 2s cubic-bezier(0.23, 1, 0.32, 1) 0s;
-}
-
-.project-mask {
-  background: none repeat scroll 0 0 rgba(0, 0, 0, 0.7);
-  height: 100%;
-  position: absolute;
-  transition: all 0.5s ease-in-out 0s;
-  width: 100%;
-  top: 0;
-  left: 0;
-  opacity: 0;
-  visibility: hidden;
-  overflow: hidden;
-}
-
-.project-mask p {
-  text-transform: uppercase;
-  font-size: 11px;
-  letter-spacing: 1.5px;
-  font-weight: 400;
-  margin-top: 0;
-  text-align: left;
-}
-
-.project-mask .project-caption {
-  position: absolute;
-  bottom: -60px;
-  left: 0;
-  padding-left: 30px;
-  padding-right: 30px;
-  text-align: left;
-  transition: all 0.5s ease-in-out 0s;
-  opacity: 0;
-}
-
-.project-mask p {
-  text-transform: uppercase;
-  font-size: 11px;
-  letter-spacing: 1.5px;
-  font-weight: 400;
-  margin-top: 0;
-  text-align: left;
 }
 
 /* Contact */
