--- a/css/main.css
+++ b/css/main.css
@@ -240,6 +240,7 @@ h5 {
   padding: 7rem 0;
 }
 
+
 .about-row {
   display: grid;
   grid-template-columns: 1.3fr 1fr;
@@ -258,6 +259,7 @@ h5 {
 
 /* Works */
 .projects {
+  font-size: 50px;
   padding: 7rem 0;
   background-color: var(--primary-bg-color);
 }
